# brainfuck_transpiler

./: .gitignore  INSTRUCTIONS.md  README.md  code.bfs  instruction_set_parser.py  lark_parser.py  main.bfs  main.py  pyproject.toml
syntax_highlight/: BrainfuckScript.xml
