[project]
name = "brainfuck-transpiler"
version = "0.1.0"
description = ""
authors = [
    {name = "ImGajeed76",email = "github.staging362@passmail.net"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lark (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
